everything compiles. working on proper codec usage and removal of outdated morphia mapping code next